@@ -69,4 +69,5 @@ exempt of errors.
 - Tom (tomdev2)
 - Yoichi Nakayama (yoichi)
 - zephyrus (zephyrus00jp)
+- Zheng Peng (darkelf2010)
 
